# hackernews-userscript

./: .gitignore  Cargo.toml  LICENSE  README.md  background-worker.js  build.sh  chrome_manifest_v3.json  firefox_manifest_v3.json  flake.nix  rustfmt.toml
src/: dom_manipulation.rs  getters.rs  lib.rs  pure.rs  setters.rs  sidebar.html  style_for_sidebar.css
