[package]
name = 'hackernews-userscript'
version = '0.1.0'
authors = ['user']
edition = '2018'

[lib]
crate-type = ['cdylib', 'rlib']

[dependencies]
wasm-bindgen = '0.2'
js-sys = '0.3'
wasm-bindgen-futures = '0.4'
console_error_panic_hook = '0.1.6'
gloo = '0.11'
gloo-console = '0.3'
regex = '1.7'
serde_json = '1.0'
indexmap = '2.1'
base64 = '0.21'

[dependencies.web-sys]
version = '0.3'
features = [
    'Document',
    'Text',
    'Element',
    'HtmlCollection',
    'HtmlElement',
    'Node',
    'NodeList',
    'Window',
    'console',
    'HtmlButtonElement',
    'KeyboardEvent',
    'HtmlInputElement',
    'HtmlImageElement',
]
